--- a/index.html
+++ b/index.html
@@ -53,8 +53,7 @@
       display:flex; align-items:center; gap:.9rem; min-width:260px;
     }
     .brand-logo{
-      height:130px; width:auto; display:block; 
-      transition:height .2s ease, transform .2s ease;
+      height:96px; width:auto; display:block; transition:height .2s ease, transform .2s ease;
     }
     .brand-text{display:flex; flex-direction:column; line-height:1.15}
     .brand-text b{
@@ -84,7 +83,7 @@
       background:rgba(245,239,230,.96);
     }
     header.scrolled .nav{padding:.55rem 0}
-    header.scrolled .brand-logo{height:96px; transform:translateY(1px)}
+    header.scrolled .brand-logo{height:76px; transform:translateY(1px)}
 
     /* ========== Seções gerais ========== */
     section{padding:var(--s6) 0; scroll-margin-top:var(--anchor-offset)}
@@ -127,8 +126,8 @@
       .grid-3{grid-template-columns:1fr}
       .portrait-circle{width:240px;height:240px}
       .brand{min-width:auto}
-      .brand-logo{height:100px}           /* logo maior no mobile */
-      header.scrolled .brand-logo{height:84px}
+      .brand-logo{height:84px}
+      header.scrolled .brand-logo{height:70px}
     }
   </style>
 
