--- a/index.html
+++ b/index.html
@@ -7,19 +7,10 @@
   <meta name="description" content="Psicoterapia humanista-existencial. Espaço de escuta, acolhimento e reflexão. Agende sua sessão com Laura Sathler, CRP 04/30866.">
   <style>
     :root{
-      --bg:#f5efe6;
-      --bg2:#faf6f1;
-      --card:#ffffff;
-      --text:#2b2b2b;
-      --muted:#6a6a6a;
-      --accent:#7aa6a8;   /* teal suave */
-      --accent-2:#f1c5a6; /* pêssego suave */
-      --border:#e9dfd6;
-      --radius:18px; 
-      --shadow:0 10px 24px rgba(0,0,0,.08);
-      --maxw:1080px; 
-      --s4:1.5rem; 
-      --s6:3rem; 
+      --bg:#f5efe6; --bg2:#faf6f1; --card:#ffffff; --text:#2b2b2b; --muted:#6a6a6a;
+      --accent:#7aa6a8; --accent-2:#f1c5a6; --border:#e9dfd6;
+      --radius:18px; --shadow:0 10px 24px rgba(0,0,0,.08);
+      --maxw:1080px; --s4:1.5rem; --s6:3rem;
       --anchor-offset: 120px;
     }
     *,*::before,*::after{box-sizing:border-box}
@@ -36,56 +27,51 @@
     .muted{color:var(--muted)}
     .container{width:min(var(--maxw),92vw);margin-inline:auto}
 
-    /* ========== Header Moderno ========== */
+    /* ========== HEADER (logo à direita) ========== */
     header{
       position:sticky; top:0; z-index:30;
       background:rgba(245,239,230,.92);
       backdrop-filter:saturate(160%) blur(8px);
       border-bottom:1px solid var(--border);
-      transition: box-shadow .2s ease, background-color .2s ease, padding .2s ease;
+      transition:box-shadow .2s ease, background-color .2s ease;
     }
+    /* Grid 3 colunas: [Esq: nome/CRP] [Centro: nav] [Dir: logo] */
     .nav{
-      display:flex; align-items:center; justify-content:space-between;
-      gap:1rem; padding:.8rem 0; transition:padding .2s ease;
+      display:grid; align-items:center; column-gap:1rem; padding:.8rem 0;
+      grid-template-columns:auto 1fr auto;
+      grid-template-areas:"brand nav logo";
     }
-    /* Bloco da marca em “linha moderna” */
-    .brand{
-      display:flex; align-items:center; gap:.9rem; min-width:260px;
-    }
-    .brand-logo{
-      height:96px; width:auto; display:block; transition:height .2s ease, transform .2s ease;
-    }
-    .brand-text{display:flex; flex-direction:column; line-height:1.15}
-    .brand-text b{
-      font-weight:800; font-size:clamp(1.05rem, 1.8vw, 1.25rem);
-      letter-spacing:.2px;
-    }
-    .brand-text small{color:var(--muted); font-size:.95rem}
+    .brand{grid-area:brand; display:flex; flex-direction:column; line-height:1.15}
+    .brand b{font-weight:800; font-size:clamp(1.05rem, 1.8vw, 1.25rem)}
+    .brand small{color:var(--muted); font-size:.95rem}
 
-    /* Menu com sublinhado animado */
-    nav ul{
-      display:flex; gap:1rem; list-style:none; margin:0; padding:0; flex-wrap:wrap;
-    }
-    nav a{
-      position:relative; padding:.45rem .6rem; border-radius:10px; font-weight:600;
-    }
+    nav{grid-area:nav; justify-self:center}
+    nav ul{display:flex; gap:1rem; list-style:none; margin:0; padding:0; flex-wrap:wrap}
+    nav a{position:relative; padding:.45rem .6rem; border-radius:10px; font-weight:600}
     nav a::after{
       content:""; position:absolute; left:.6rem; right:.6rem; bottom:.2rem;
       height:2px; background:color-mix(in srgb, var(--accent) 65%, #fff);
-      transform:scaleX(0); transform-origin:left; transition:transform .18s ease;
-      border-radius:2px;
+      transform:scaleX(0); transform-origin:left; transition:transform .18s ease; border-radius:2px;
     }
     nav a:hover::after{transform:scaleX(1)}
 
-    /* Header encolhe ao rolar */
-    header.scrolled{
-      box-shadow:0 8px 24px rgba(0,0,0,.07);
-      background:rgba(245,239,230,.96);
+    .logo-wrap{grid-area:logo; justify-self:end}
+    .brand-logo{
+      height:110px; width:auto; display:block; transition:height .2s ease, transform .2s ease;
     }
-    header.scrolled .nav{padding:.55rem 0}
-    header.scrolled .brand-logo{height:76px; transform:translateY(1px)}
+    header.scrolled{box-shadow:0 8px 24px rgba(0,0,0,.07); background:rgba(245,239,230,.96)}
+    header.scrolled .brand-logo{height:90px; transform:translateY(1px)}
 
-    /* ========== Seções gerais ========== */
+    /* ========== MENU MOBILE (hambúrguer) ========== */
+    .menu-toggle{display:none}
+    .menu-btn{
+      display:none; grid-area:menu; justify-self:center;
+      border:1px solid var(--border); border-radius:10px;
+      padding:.5rem .75rem; font-weight:700; cursor:pointer;
+      background:transparent;
+    }
+
+    /* ========== SEÇÕES ========== */
     section{padding:var(--s6) 0; scroll-margin-top:var(--anchor-offset)}
     .card{
       background:var(--card); border:1px solid var(--border);
@@ -101,8 +87,9 @@
       width:300px;height:300px;border-radius:50%;object-fit:cover;
       box-shadow:var(--shadow);display:block;margin:auto
     }
+    .img-cover{width:100%;height:auto;border-radius:var(--radius);box-shadow:var(--shadow)}
 
-    /* Botões */
+    /* Botões / CTA */
     .mini-cta{display:flex;gap:1rem;flex-wrap:wrap;margin-top:.75rem}
     .btn{display:inline-block;border-radius:12px;padding:.7rem 1rem;font-weight:700;border:1px solid var(--border);min-width:180px;text-align:center}
     .btn-primary{background:var(--accent);color:#fff;border-color:transparent}
@@ -110,24 +97,37 @@
 
     /* Ícones de contato */
     .social{display:flex;justify-content:center;gap:1rem;margin-top:1rem;flex-wrap:wrap}
-    .social a{
-      display:inline-flex;align-items:center;justify-content:center;
-      width:52px;height:52px;border-radius:16px;background:transparent;
-      transition:transform .15s ease, filter .15s ease;
-    }
+    .social a{display:inline-flex;align-items:center;justify-content:center;width:52px;height:52px;border-radius:16px;transition:transform .15s ease, filter .15s ease}
     .social a:hover{transform:translateY(-1px);filter:brightness(0.98)}
     .social svg{width:52px;height:52px;display:block}
 
     footer{padding:2rem 0;border-top:1px solid var(--border);color:var(--muted);text-align:center}
 
-    /* ====== Responsivo ====== */
+    /* ====== RESPONSIVO ====== */
     @media(max-width:900px){
+      /* Header vira 2 linhas: [brand | logo] / [menu] */
+      .nav{
+        grid-template-columns:1fr auto;
+        grid-template-areas:
+          "brand logo"
+          "menu  menu";
+        row-gap:.5rem;
+      }
+      nav{grid-area:menu; width:100%}
+      /* botão visível */
+      .menu-btn{display:block}
+      /* esconde nav por padrão no mobile */
+      .menu-toggle:not(:checked) + label + nav{display:none}
+      /* nav abre em bloco quando marcado */
+      .menu-toggle:checked + label + nav{display:block}
+      nav ul{flex-direction:column; align-items:center; padding:.25rem 0}
+
+      .brand-logo{height:90px}
+      header.scrolled .brand-logo{height:76px}
+
       .grid-2{grid-template-columns:1fr}
       .grid-3{grid-template-columns:1fr}
       .portrait-circle{width:240px;height:240px}
-      .brand{min-width:auto}
-      .brand-logo{height:84px}
-      header.scrolled .brand-logo{height:70px}
     }
   </style>
 
@@ -141,16 +141,20 @@
   </script>
 </head>
 <body>
-  <!-- Header -->
+  <!-- ===== HEADER ===== -->
   <header id="topbar">
     <div class="container nav">
+      <!-- Esquerda: Nome e CRP -->
       <div class="brand" aria-label="Identidade do site">
-        <img src="Logomarca.png" alt="Logomarca Laura Sathler" class="brand-logo" onerror="this.style.display='none'">
-        <div class="brand-text">
-          <b>Laura Sathler</b>
-          <small>Psicóloga · CRP 04/30866</small>
-        </div>
+        <b>Laura Sathler</b>
+        <small>Psicóloga · CRP 04/30866</small>
       </div>
+
+      <!-- Mobile: botão + checkbox -->
+      <input id="menu" class="menu-toggle" type="checkbox" />
+      <label for="menu" class="menu-btn" aria-label="Abrir menu">☰ Menu</label>
+
+      <!-- Centro/abaixo (mobile): Navegação -->
       <nav aria-label="principal">
         <ul>
           <li><a href="#psicoterapia">O que é Psicoterapia</a></li>
@@ -160,6 +164,11 @@
           <li><a href="#contato">Contato</a></li>
         </ul>
       </nav>
+
+      <!-- Direita: Logomarca isolada -->
+      <div class="logo-wrap">
+        <img src="Logomarca.png" alt="Logomarca Laura Sathler" class="brand-logo" onerror="this.style.display='none'">
+      </div>
     </div>
   </header>
 
@@ -173,7 +182,7 @@
           <p>Esse caminho nem sempre é simples; ele exige presença e coragem para olhar para dentro. Mas também é um espaço de encontro, clareza e afeto, que abre possibilidades para escolhas mais conscientes e formas mais autênticas de viver.</p>
         </div>
         <div class="media">
-          <img class="img-cover" src="Terapeuta-Paciente.png" alt="Terapeuta e paciente em diálogo acolhedor" loading="lazy" decoding="async" style="width:100%;border-radius:18px;box-shadow:var(--shadow)">
+          <img class="img-cover" src="Terapeuta-Paciente.png" alt="Terapeuta e paciente em diálogo acolhedor" loading="lazy" decoding="async">
         </div>
       </div>
     </section>
@@ -279,12 +288,15 @@
         <p>Estou à disposição para conversar e iniciar um processo terapêutico com você.</p>
 
         <div class="social" aria-label="Canais de contato">
+          <!-- WhatsApp -->
           <a class="gtag-out" href="https://wa.me/5531991593800" target="_blank" rel="noopener" aria-label="WhatsApp" data-gtag-event="whatsapp_click" data-gtag-label="footer_whatsapp">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64"><circle cx="32" cy="32" r="32" fill="#25D366"/><path fill="#fff" d="M45.6 18.4A16.5 16.5 0 0 0 16.7 43.9l-1.1 6.9 7-1.1A16.5 16.5 0 0 0 45.6 18.4Zm-6 23.8a13.2 13.2 0 0 1-6.5 1.8h-.1a13 13 0 0 1-5.7-1.4l-.4-.2-4.2.7.7-4.1-.3-.4a13 13 0 1 1 16.5 3.6Z"/></svg>
           </a>
+          <!-- E-mail -->
           <a class="gtag-out" href="mailto:Laurasathler@yahoo.com.br" aria-label="E-mail" data-gtag-event="email_click" data-gtag-label="footer_email">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64"><rect x="4" y="12" width="56" height="40" rx="8" fill="#4f7cff"/><path fill="#fff" d="M10 20l22 14L54 20v6L32 40 10 26z"/></svg>
           </a>
+          <!-- Instagram -->
           <a href="https://www.instagram.com/laurasathler_psi" target="_blank" rel="noopener" aria-label="Instagram">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64">
               <defs>
@@ -309,10 +321,10 @@
   </footer>
 
   <script>
-    // Atualiza ano
+    // Ano no rodapé
     document.getElementById('year').textContent = new Date().getFullYear();
 
-    // Header dinâmico (sombra + logo menor) e âncora sempre alinhada ao topo real
+    // Header: sombra ao rolar + recalcula âncora (evita título cortado)
     const header = document.getElementById('topbar');
     function setOffset(){ document.documentElement.style.setProperty('--anchor-offset', header.offsetHeight + 'px'); }
     function onScroll(){ header.classList.toggle('scrolled', window.scrollY > 10); setOffset(); }
@@ -320,7 +332,12 @@
     window.addEventListener('resize', setOffset);
     window.addEventListener('scroll', onScroll);
 
-    // Rastreamento simples de cliques externos (gtag)
+    // Fecha o menu após clique no mobile
+    document.querySelectorAll('nav a').forEach(a=>{
+      a.addEventListener('click',()=>{ const cb=document.getElementById('menu'); if(cb) cb.checked=false; setOffset(); });
+    });
+
+    // Rastreamento simples de cliques externos (se gtag ativo)
     (function(){
       function trackLink(ev){
         try{
